--- a/resources/interactives/dog-zoom/index.html
+++ b/resources/interactives/dog-zoom/index.html
@@ -7,12 +7,15 @@
       .p-none {
         pointer-events: none;
       }
+      .bg-lighter-gray {
+      background-color: rgba(250, 250, 250, 1)
+    }
     </style>
   </head>
   <body>
-    <div class="w-100 mw7 center bg-moon-gray">
+    <div class="w-100 mw7 center bg-lighter-gray">
       <div class="w-100 center sans-serif dark-gray overflow-hidden relative" id="container">
-        <div class="center w-100 z-2 bottom-0 absolute pa2 blue outline bg-white dt">
+        <div class="center w-100 z-2 bottom-0 absolute pa2 blue outline bg-lighter-gray dt">
           <div class="f2 tc dtc label w-50 pr4 dim">
             <div class="f2 pointer blue no-underline dim ph3 code pv2 mb2 dib fr tc outline shaded" href="#0" onclick="increment(-1)" id="buttonminus">-</div>
           </div>
