--- a/resources/interactives/dog-zoom/index.html
+++ b/resources/interactives/dog-zoom/index.html
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <div class="w-100 mw7 center bg-lighter-gray">
+    <div class="w-100 mw7 center bg-lighter-gray moon-gray bb">
       <div class="w-100 center sans-serif dark-gray overflow-hidden relative" id="container">
         <div class="center w-100 z-2 bottom-0 absolute pa2 blue outline bg-lighter-gray dt">
           <div class="f2 tc dtc label w-50 pr4 dim">
